--- a/css/style.scss
+++ b/css/style.scss
@@ -4,10 +4,15 @@ body {
   background-color: #dcf5ff;
   margin: 0;
   height: 100vh;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   justify-items: center;
   align-items: center;
   font-family: "Nunito", sans-serif;
+}
+
+.container {
+  margin: 50px;
 }
 
 // .container {
@@ -74,5 +79,105 @@ body {
   p {
     color: white;
     font-size: 0.9rem;
+  }
+}
+
+.cards {
+  display: flex;
+  position: relative;
+  width: 800px;
+  height: 240px;
+
+  .card {
+    width: 160px;
+    padding: 20px;
+    height: 200px;
+    border-radius: 10px;
+    background-color: rgb(65, 65, 65);
+    color: white;
+    box-shadow: -15px 0px 50px black;
+    position: absolute;
+
+    p {
+      font-size: 1rem;
+      font-weight: bold;
+      span {
+        color: rgb(138, 138, 138);
+        margin: 0;
+      }
+    }
+
+    span {
+      display: block;
+      margin-top: 50px;
+    }
+
+    &:first-child() {
+      left: 0px;
+      z-index: 0;
+    }
+
+    &:nth-child(2) {
+      left: 120px;
+      z-index: 1;
+    }
+
+    &:nth-child(3) {
+      left: 240px;
+      z-index: 2;
+    }
+
+    &:nth-child(4) {
+      left: 360px;
+      z-index: 3;
+    }
+
+    &:last-child {
+      left: 480px;
+      z-index: 4;
+      animation: none;
+    }
+
+    &:last-child:hover {
+      animation: none;
+    }
+
+    &:hover {
+      animation: rotation 0.5s forwards linear;
+    }
+  }
+}
+
+@keyframes rotation {
+  100% {
+    transform: translateX(-50px) rotate(20deg);
+  }
+}
+
+@keyframes reverteRotation {
+  100% {
+    transform: translateX(50px) rotate(-20deg);
+  }
+}
+
+svg {
+  width: 100px;
+  height: 100px;
+}
+
+svg rect {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke-width: 100px;
+  stroke: #00adff;
+  stroke-dasharray: 100;
+  stroke-dashoffset: 50%;
+  animation: loadingAnimation 2s linear infinite;
+}
+
+@keyframes loadingAnimation {
+  to {
+    stroke-dashoffset: 250%;
   }
 }
