Styled analog clock

--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,6 @@
 body {
   background-color: #dcf5ff;
   margin: 0;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-items: center;
@@ -180,4 +179,92 @@ svg rect {
   to {
     stroke-dashoffset: 250%;
   }
+}
+
+.clock {
+  width: 350px;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("../img/clock.png");
+  background-size: cover;
+  border: 4px solid #dcf5ff;
+  box-shadow: 0 15px 15px rgba(59, 59, 59, 0.05), inset 0 15px 15px rgba(59, 59, 59, 0.05),
+    0 15px 15px rgba(0, 0, 0, 0.3), inset 0 15px 15px rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+}
+
+.clock:before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background-color: #091924;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 10;
+}
+
+.clock .hour,
+.clock .min,
+.clock .sec {
+  position: absolute;
+}
+
+.clock .hour,
+.hr {
+  width: 160px;
+  height: 160px;
+}
+
+.clock .min,
+.mn {
+  width: 190px;
+  height: 190px;
+}
+
+.clock .sec,
+.sc {
+  width: 230px;
+  height: 230px;
+}
+
+.hr,
+.mn,
+.sc {
+  display: flex;
+  justify-content: center;
+  // align-items: center;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.hr:before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 80px;
+  background: #000000;
+  z-index: 7;
+  border-radius: 6px 6px 0 0;
+}
+
+.mn:before {
+  content: "";
+  position: absolute;
+  width: 4px;
+  height: 90px;
+  background: #160079;
+  z-index: 8;
+  border-radius: 6px 6px 0 0;
+}
+
+.sc:before {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 150px;
+  background: #2f00ff;
+  z-index: 9;
+  border-radius: 6px 6px 0 0;
 }
